--- a/README
+++ b/README
@@ -10,24 +10,22 @@ Repository Structure
 
     CNN_TPE_BrainTumor_Reproduction/
     │
-    ├── process_dataset.py                  # Dataset preprocessing, normalization, labeling
     ├── train_cnn_tpe.py                   # CNN model training and TPE hyperparameter optimization
-    ├── evaluate_model.py                  # Model evaluation on the test split
-    ├── fine_tune_model.py                 # Fine-tuning a trained model on new data
+    
     │
     ├── environment_cpu.yml                # Conda environment (CPU)
     ├── environment_gpu.yml                # Conda environment (GPU)
     │
     ├── notebooks/
-    │   ├── 1_data_preparation.ipynb       # Interactive dataset creation
-    │   ├── 2_hyperparameter_search.ipynb  # TPE optimization workflow
-    │   ├── 3_train_evaluate.ipynb         # Model training and evaluation
+    │   ├── 1_data_preparation             # Interactive dataset creation
+    │   ├── 2_hyperparameter_search      # TPE optimization workflow
+    │   ├── 3_train_evaluate            # Model training and evaluation
     │
     ├── src/
-    │   ├── model_architectures.py         # CNN architectures and layers
-    │   ├── tpe_functions.py               # Search space definitions and optimization logic
-    │   ├── training_utils.py              # Training loop, callbacks, metrics
-    │   ├── dataset_utils.py               # Loaders, augmentation, transformations
+    │   ├── model_architectures             # CNN architectures and layers
+    │   ├── tpe_functions                   # Search space definitions and optimization logic
+    │   ├── training_utils                  # Training loop, callbacks, metrics
+    │   ├── dataset_utils                 # Loaders, augmentation, transformations
     │
     ├── trained_models/
     │   ├── CNN_TPE_BestModel.pth          # Best model checkpoint
@@ -59,19 +57,19 @@ Usage
 
 1. Dataset Processing
 
-    python process_dataset.py     --data_dir ./raw_data     --output_dir ./processed_data     --img_size 224
+    python process_dataset     --data_dir ./raw_data     --output_dir ./processed_data     --img_size 224
 
 2. Run TPE Optimization
 
-    python train_cnn_tpe.py     --train_dir ./processed_data/train     --val_dir ./processed_data/val     --epochs 30     --trials 50     --save_dir trained_models/
+    python train_cnn_tpe     --train_dir ./processed_data/train     --val_dir ./processed_data/val     --epochs 30     --trials 50     --save_dir trained_models/
 
 3. Evaluate Model
 
-    python evaluate_model.py     --test_dir ./processed_data/test     --model trained_models/CNN_TPE_BestModel.pth     --params trained_models/CNN_TPE_BestParams.json
+    python evaluate_model     --test_dir ./processed_data/test     --model trained_models/CNN_TPE_BestModel.pth     --params trained_models/CNN_TPE_BestParams.json
 
 4. Fine-Tune Model
 
-    python fine_tune_model.py     --new_data ./new_dataset     --model trained_models/CNN_TPE_BestModel.pth     --epochs 10
+    python fine_tune_model     --new_data ./new_dataset     --model trained_models/CNN_TPE_BestModel.pth     --epochs 10
 
 Input Format
 
@@ -119,15 +117,15 @@ Configuration
 
 Editable parameters in:
 
--   tpe_functions.py
--   model_architectures.py
--   train_cnn_tpe.py
+-   tpe_functions
+-   model_architectures
+-   train_cnn_tpe
 
 End-to-End Execution
 
-    python process_dataset.py
-    python train_cnn_tpe.py
-    python evaluate_model.py
+    python process_dataset
+    python train_cnn_tpe
+    python evaluate_model
 
 Notebooks
 
